--- a/config.toml
+++ b/config.toml
@@ -35,6 +35,7 @@ unsafe= true
   description = """
  <p style="text-align: justify;">Les familles Ben Naser et Ayachi ont l’honneur de vous convier au mariage de leurs enfants Dhia et Dorra qui sera célébré à la <strong>Mairie du XVème</strong> arrondissement de Paris le <strong>11 avril 2020</strong> <strong>à 10h</strong>.&nbsp;</p>
 <p style="text-align: justify;">Dans le prolongement de la cérémonie, nous vous invitons à partager un moment convivial autour d’un cocktail au sein de la Mairie jusqu’à <strong>12h30</strong>.&nbsp;</p>
+<p style="text-align: justify;">La cérémonie religieuse se tiendra à la mosquée de Paris au 2bis Place du Puits de l'Ermite, dès 15h.</p>
 <p style="text-align: justify;">Nous comptons sur votre présence pour partager avec nous ce moment de bonheur.</p>
 <p style="margin: 0in 0in 8pt; line-height: 107%; font-family: Calibri, sans-serif; text-align: justify;">تتشرف عائلتا ابن نصر والعياشي باستدعائكم لحضور زواج ابنيهما: <strong>ضياء و درة</strong></p>
 <p style="margin: 0in 0in 8pt; line-height: 107%; font-family: Calibri, sans-serif; text-align: justify;">وذلك يوم السبت 18 شعبان 1441 هجري / <strong>11 أفريل 2020م</strong> &nbsp;</p>
